后台服务器搭建完成，成功连接数据库，增加用户，查询用户等功能

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,4 +10,8 @@
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
+  <view>
+    <button bindtap='createcourse'>创建课程</button>
+    <button bindtap='managecourse'>管理课程</button>
+  </view>
 </view>
