--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,3 +1,24 @@
+<!--mine.wxml-->
 <view class="container">
-  <text>我是{{name}}</text>
-</view>
+  <view class="userinfo">
+    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
+    <block wx:else>
+      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+    </block>
+  </view>
+  <view class="itemView">备注名：
+    <input class="input" name="courseName" placeholder="请输入个人备注名"
+    bindinput="remarkNameInput"/>
+  </view>
+  <view>
+    <button bindtap='createuser'>新增用户</button>
+  </view>
+  </view>
+<view>{{infoMess}}</view>
+<view>{{nickName}}</view>
+<view>{{remarkName}}</view>
+<view>{{gender}}</view>
+<view>{{city}}</view>
+<view>{{province}}</view>
+<view>{{country}}</view>
