--- a/app.wxss
+++ b/app.wxss
@@ -18,6 +18,9 @@ page{
 .page__hd {
     padding: 20px;
 }
+.page_left_hd{
+    padding-left: 15px;
+}
 .page__td {
     padding-top: 5px;
 }
@@ -49,4 +52,9 @@ page{
     color: #888888;
     text-align: left;
     font-size: 14px;
+}
+
+.radio {
+  display: block;
+  margin-bottom: 10rpx;
 }
