--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -28,7 +28,26 @@
             </block>
         </view>
     </view> -->
-    <template is='course-list' data="{{list}}" />
+        <view class="page__td_spacing page__bd_spacing">
+        <block wx:for="{{list}}" wx:key="id">
+            <view class="kind-list__item">
+                <view id="{{item.id}}" class="weui-flex kind-list__item-hd {{item.open ? 'kind-list__item-hd_show' : ''}}" bindtap="kindToggle">
+                    <view class="weui-flex__item">{{item.name}}</view>
+                    <image class="kind-list__img" src="../../images/icon_nav_3lines.png"></image>
+                </view>
+                <view class="kind-list__item-bd {{item.open ? 'kind-list__item-bd_show' : ''}}">
+                    <view class="weui-cells {{item.open ? 'weui-cells_show' : ''}}">
+                        <view wx:for="{{item.pages}}" wx:for-item="page" wx:key="index"> 
+                            <navigator url="../coursepage/coursepage?courseid={{page.id}}" class="weui-cell weui-cell_access">
+                              <view class="weui-cell__bd">{{page.name}}</view>
+                              <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+                            </navigator> 
+                        </view>
+                    </view>
+                </view>
+            </view>
+        </block>
+      </view>
+  </view>
     
 
-</view>
