--- a/pages/exercise/exercisehistory/exercisehistory.wxml
+++ b/pages/exercise/exercisehistory/exercisehistory.wxml
@@ -17,7 +17,7 @@
                           </view> 
                       </label>
                     </radio-group> 
-                    <!-- <view class="weui-cell__bd">正确答案：{{question.ans}}</view> -->
+                     <view class="weui-cell__bd">正确答案：{{question.ans}}</view> 
                   </view>
                 </view>
               </view>
